name:                servant-github
version:             0.1.0.6
synopsis:            Bindings to GitHub API using servant.
description:         This package provides a servant-client based client
                     for accessing the <https://developer.github.com/v3/ GitHub API v3>.
                     .
                     The github client is provided through the 'Network.GitHub.GitHub' monad,
                     which provides support for managing the user-agent (a requirement
                     for github), an authentication token, and, pagination
                     support when the resulting value is a list.
                     .
                     >
                     > import System.Environment
                     > import Data.String
                     > import Network.GitHub
                     >
                     > main = do
                     >    token <- fmap fromString <$> lookupEnv "GITHUB_TOKEN"
                     >    result <- runGitHub userOrganisations token
                     >    case result of
                     >        Left e  ->  print e
                     >        Right orgs -> mapM_ print orgs

homepage:            http://github.com/finlay/servant-github#readme
license:             BSD3
license-file:        LICENSE
author:              Finlay Thompson
maintainer:          finlay.thompson@gmail.com
copyright:           2015 Finlay Thompson
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:   Network.GitHub.API
                     -- , Network.GitHub.Client
                     , Network.GitHub.Types
                     , Network.GitHub.Types.Core
                     , Network.GitHub.Types.Gist
                     , Network.GitHub.Types.Gist.Core
                     , Network.GitHub.Types.Gist.Edit
                     , Network.GitHub.Types.Gist.Create
                     -- , Network.GitHub.Client.Core
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , http-api-data
                     -- , http-link-header
                     , http-media
                     , http-types
                     , servant
                     , servant-client-jsaddle >= 0.9 && < 0.15
                     , text
                     , time
                     , transformers
                     , lens
                     , mtl
                     , unordered-containers
                     , semigroups
                     , servant-client-core
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/finlay/servant-github
